# planforge-ai

./: .gitignore  AGENTS.md  CLAUDE.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/ai/: client.py  structured_output.py  token_tracker.py
backend/app/ai/prompts/: architecture.j2  feature_breakdown.j2  prioritization.j2  production_audit.j2  smart_questions.j2  spec_generation.j2  task_prompt.j2
backend/app/api/v1/: agents.py  analytics.py  architecture.py  auth.py  billing.py  chat.py  features.py  (+7 more)
backend/app/models/: __init__.py  agent_run.py  base.py  chat_session.py  decision_log.py  feature.py  organization.py  project.py  spec.py  spec_version.py  task.py  template.py  user.py
backend/app/schemas/: __init__.py  agent.py  chat.py  common.py  feature.py  project.py  spec.py  task.py  user.py
backend/app/services/: agent_orchestrator.py  ai_planner.py  architecture_engine.py  billing_service.py  codebase_analyzer.py  email_service.py  export_service.py  feature_decomposer.py  prioritizer.py  production_checker.py  spec_generator.py  task_generator.py  template_engine.py
backend/app/utils/: github_client.py  pagination.py  rate_limiter.py  security.py
backend/app/workers/: agent_tasks.py  ai_tasks.py  analytics_tasks.py  celery_app.py  export_tasks.py
backend/migrations/: env.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_projects.py
backend/tests/test_services/: test_ai_planner.py
(+106 files in other folders)
