[project]
name = "planforge-backend"
version = "0.1.0"
description = "PlanForge AI - Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]>=0.34.0",
    "motor>=3.6.0",
    "beanie>=1.27.0",
    "pymongo[srv]>=4.9.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "anthropic>=0.42.0",
    "openai>=1.58.0",
    "instructor>=1.7.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
